overlay/homelab/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: homelab
  name: homelab
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.ntbc.io"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: ntbc-io-tls
    allowedRoutes:
      namespaces:
        from: All
